--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@types/react-dom": "^18.0.11",
     "classnames": "^2.3.2",
     "framer-motion": "^10.0.2",
-    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.58.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
